out3.txt
/home/reddcs/aiia/documentation/data.js:3889
`public/index.php\`.
 ^^^^^^

SyntaxError: Unexpected identifier 'undefined'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v25.2.1
